# streamdeck-youtube-emotes

./: Cargo.toml  README.md  flake.nix
.github/workflows/: create-tag.yml  release.yml  test.yml
src/: main.rs  profile.rs  youtube.rs
