[package]
name = "streamdeck-youtube-emotes"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
bytes = "1.1.0"
futures = "0.3.17"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
