[package]
name = "streamdeck-youtube-emotes"
version = "0.1.6-alpha.0"
edition = "2018"
publish = false

[dependencies]
bytes = "1.1.0"
color-eyre = "0.5.11"
dirs = "3.0.2"
fs_extra = "1.2.0"
futures = "0.3.17"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
uuid = { version = "0.8.2", features = ["serde", "v5"] }
